<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_overview" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_transactions" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_accounts" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Actions">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>

